# slowballs

./: .clangd  .gitmodules  CMakeLists.txt  Config.h  SlowBallsBruteforce.h  SlowBallsBruteforceSimd.h  SlowBallsGrid.h  SlowBallsGridSimd.h  main.cpp  params.h  slowballs.cpp  slowballs.h  vec.h
